2024-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-30  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2022-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

	* docs/.nojekyll: Moved

2021-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pushes.R (pbPost): Suppress a warning from comparison in case of
	multiple emails (thanks Josh Ulrich for the heads-up)

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added to DESCRIPTION

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.4

2021-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated http:// links to https://
	* DESCRIPTION: Idem
	* R/devices.R: Idem
	* R/pushes.R: Idem
	* man/pbGetDevices.Rd: Idem
	* man/pbPost.Rd: Idem
	* man/rpushbullet-package.Rd: Idem

	* .Rbuildignore: Add .nojekyll

2021-02-27  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Added run.sh from r-ci
	* .Rbuildignore: Added .github
	* .travis.yml: Minor edit

	* .rpushbullet.json.gpg: New gpg-encrypted tokenfile
	* .github/scripts/decrypt_tokenfile.sh: Added helper to decrypt
	* .github/workflows/ci.yaml: Use helper and token via secret

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* README.md: Added badge and short paragraph linking to documentation

2020-06-14  Dirk Eddelbuettel  <edd@debian.org>
